# bot_fm

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 2ed1bfb43f61_initial_tables.py  c69b561689a0_menambahkan_transfer_di_category.py
app/application/dtos/: extraction.py
app/application/services/: transaction_service.py
app/application/usecases/: telegram.py
app/core/: di.py  settings.py
app/domain/finance/: entities.py  exceptions.py  ports.py  rules.py
app/domain/llm/: ports.py
app/domain/telegram/: entities.py  ports.py  rules.py
app/infrastructure/db/: base.py  models.py
app/infrastructure/db/repositories/: finance.py  telegram.py
app/infrastructure/llm/: client.py
app/infrastructure/telegram/: client.py
app/interfaces/http/routers/: telegram_webhook.py
app/presentation/schemas/: telegram.py
