[project]
name = "fm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "fastapi[standard]>=0.128.0",
    "sqlalchemy>=2.0.28",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.3",
    "pydantic-settings>=2.2.1",
    "google-generativeai>=0.4.1",
]
